kubernetes/samples/scripts/create-weblogic-domain/domain-home-on-pv/istio/destination-rule-cluster1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cluster1
spec:
  host: domain1-cluster-cluster-1
  subsets:
  - name: ms1
    labels:
      app: domain1-managed-server1
  - name: ms2
    labels:
      app: domain1-managed-server2
