kubernetes/samples/scripts/create-weblogic-domain/domain-home-on-pv/istio/virtual-service-cluster-ms1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default-vs
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: /console
    route:
    - destination:
        host: domain1-admin-server-external.default.svc.cluster.local
        port:
          number: 7001
  - route:
    - destination:
        host: domain1-cluster-cluster-1.default.svc.cluster.local
        subset: ms1
        port:
          number: 31111
